tests/csmith/bad/smith001612.c
/*
 * This is a RANDOMLY GENERATED PROGRAM.
 *
 * Generator: csmith 2.0.0
 * svn version: exported
 * Options:   --check-global -s 1612
 * Seed:      1612
 */

#include "random_runtime.h"


long __undefined;

/* --- Struct/Union Declarations --- */
/* --- GLOBAL VARIABLES --- */
 volatile int64_t g_2 = 0x38A1F94964A53AA9LL;/* VOLATILE GLOBAL g_2 */
int32_t g_4 = 1L;
int32_t g_6 = 0x80849F84L;
uint16_t g_9 = 5L;


/* --- FORWARD DECLARATIONS --- */
uint32_t  func_1(void);


/* --- FUNCTIONS --- */
/* ------------------------------------------ */
/* 
 * reads : g_2 g_4 g_9
 * writes: g_4 g_6 g_9
 */
uint32_t  func_1(void)
{ /* block id: 0 */
    int32_t *l_3 = &g_4;
    int32_t *l_5 = &g_6;
    int64_t l_13 = 0x0F82BAEF6E229EDCLL;
    (*l_3) ^= (0L ^ g_2);
    (*l_5) &= (*l_3);
    if ((safe_div_func_uint64_t_u_u((*l_3), 5L)))
    { /* block id: 3 */
        return g_9;
    }
    else
    { /* block id: 5 */
        for (g_9 = -26; (g_9 >= 15); g_9 = safe_sub_func_int64_t_s_s(g_9, 1))
        { /* block id: 8 */
            int32_t * const l_12 = 0;
            (*l_3) = (l_12 != l_12);
        }
    }
    return l_13;
}




/* ---------------------------------------- */
int main (int argc, char* argv[])
{
    func_1();
    printf("checksum g_2 = %d\n", g_2);
    printf("checksum g_4 = %d\n", g_4);
    printf("checksum g_6 = %d\n", g_6);
    printf("checksum g_9 = %d\n", g_9);
}

/************************ statistics *************************
XXX max struct depth: 0
breakdown:
   depth: 0, occurrence: 8

XXX max expression depth: 1
breakdown:
   depth: 0, occurrence: 5
   depth: 1, occurrence: 1

XXX total number of pointers: 3

XXX times a variable address is taken: 2
XXX times a pointer is dereferenced on RHS: 2
breakdown:
   depth: 1, occurrence: 2
XXX times a pointer is dereferenced on LHS: 3
breakdown:
   depth: 1, occurrence: 3
XXX times a pointer is compared with null: 0
XXX times a pointer is compared with address of another variable: 0
XXX times a pointer is compared with another pointer: 1
XXX times a pointer is qualified to be dereferenced: 7

XXX max dereference level: 1
breakdown:
   level: 0, occurrence: 0
   level: 1, occurrence: 9
XXX number of pointers point to pointers: 0
XXX number of pointers point to scalars: 3
XXX number of pointers point to structs: 0
XXX percent of pointers has null in alias set: 33.3
XXX average alias set size: 1

XXX times a non-volatile is read: 9
XXX times a non-volatile is write: 7
XXX times a volatile is read: 1
XXX    times read thru a pointer: 0
XXX times a volatile is write: 0
XXX    times written thru a pointer: 0
XXX times a volatile is available for access: 1
XXX percentage of non-volatile access: 94.1

XXX forward jumps: 0
XXX backward jumps: 0

XXX stmts: 13

XXX percentage a fresh-made variable is used: 57.1
XXX percentage an existing variable is used: 42.9
********************* end of statistics **********************/

